# faciliter-lib

./: CODE_REVIEW_SUMMARY.md  LAZY_INITIALIZATION_ANALYSIS.md  LICENSE  MANIFEST.in  Makefile  README.md  SETUP_SUMMARY.md  TODO.md  example_tracing_usage.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
core_lib/: __init__.py  mcp_utils.py
docs/: API_AUTH_QUICK_REFERENCE.md  API_CLIENT_BASE_CLASS.md  AUTH_IMPLEMENTATION_SUMMARY.md  DJANGO_LOGGING_INTEGRATION.md  EMBEDDINGS_GUIDE.md  EMBEDDINGS_QUICK_REFERENCE.md  EMBEDDING_URL_CONFIGURATION.md  ENV_VARIABLES.md  FASTAPI_OPENAPI_QUICK_REFERENCE.md  FROM_FIELD_DESCRIPTION.md  INFINITY_IMPLEMENTATION_SUMMARY.md  INFINITY_PROVIDER.md  INFINITY_QUICKSTART.md  JOB_QUEUE_QUICK_REFERENCE.md  LLM_GUIDE.md  LLM_QUICK_REFERENCE.md  OPENSEARCH_DASHBOARD_SETUP.md  OTLP_LOGGING_INTEGRATION.md  OTLP_QUICK_REFERENCE.md  SERVICE_PRICING_MAINTENANCE.md  SERVICE_USAGE_TRACKING.md  SETTINGS_SINGLETON_QUICK_REF.md  SETUP_SUMMARY.md  VERSION_MANAGEMENT.md  cache.md  centralized-logging.md  excel_manager.md  language_utils.md  llm.md  mcp_utils.md  observability-metadata.md  settings.md  settings_singleton.md  tracing_tests.md
examples/: embeddings_quick_start.py  example_api_auth.py  example_api_client_usage.py  example_cache_pooling_health_check.py  example_cache_providers.py  example_custom_settings.py  example_django_logging.py  example_embedding_fallback.py  example_embeddings_usage.py  example_fastapi_openapi.py  example_infinity_embeddings.py  example_llm_usage.py  example_otlp_logging.py  example_ovh_ldp_logging.py  example_retry_demo.py  example_retry_usage.py  example_service_usage_tracking.py  example_settings_singleton.py  example_settings_usage.py  example_task_types_demo.py  example_tracing_usage.py  example_usage.py
faciliter_lib/: __init__.py  mcp_utils.py
tests/: conftest.py  test_api_settings.py  test_api_utils.py  test_app_settings.py  (+34 more)
(+156 files in other folders)
